# aiohttp_extras

./: .gitignore  Makefile  README.rst  setup.cfg  setup.py
attic/aiohttp_extras/: _view.py
attic/aiohttp_extras/serializers/hal_json/: __init__.py  _parse_embed.py
docs/: .buildinfo  api_docs.html  genindex.html  glossary.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  sphinx_101.html  todo_list.html
docs/_modules/: index.html
docs/_modules/aiohttp_extras/: _conditional.html  _content_negotiation.html  _etags.html  _hal_json.html  _json.html  _view.html
docs/_modules/aiohttp_extras/serializers/: hal_json.html
docs/_sources/: api_docs.rst.txt  sphinx_101.rst.txt
docs/_sources/api/: config_loader.rst.txt  content_negotiation.rst.txt  etags.rst.txt  hal_json.rst.txt  rest_utils.rst.txt  view.rst.txt
docs/_static/: theme_overrides.css
docs/api/: conditional.html  config_loader.html  content_negotiation.html  etags.html  hal_json.html  json.html  rest_utils.html  view.html
sphinx/: Makefile  conf.py  index.rst  sphinx_101.rst
sphinx/api/: conditional.rst  hal_json.rst  json.rst
src/aiohttp_extras/: __init__.py  _conditional.py  _content_negotiation.py  _hal_json.py  _json.py  _parse_embed.py  _swagger.py  _view.py  middlewares.py
src/aiohttp_extras/serializers/hal_json/: _parse_embed.py  _view.py
src/authz_admin/: authorization_old.py  view.py
tests/aiohttp_extras/: helpers.py  test_parse_embed.py
tests/authz_admin/: main.py
