[metadata]
author = Pieter van Beek
author_email = aiohttp_extras.github.com@djinnit.com
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
description = ReSTful stuff for aiohttp
license = Mozilla Public License Version 2.0
long_description = file: README.rst
name = datapunt-aiohttp-extras
project_urls =
  Documentation = https://amsterdam.github.io/aiohttp_extras
  Source Code = https://github.com/Amsterdam/aiohttp_extras
url = https://github.com/Amsterdam/aiohttp_extras
version = attr: aiohttp_extras.VERSION


[options]
install_requires =
  aiohttp
  multidict
  PyYaml
  PyJWT
  swagger-parser
package_dir =
  =src
packages = find:
python_requires = ~=3.6


[options.packages.find]
where=src


[options.extras_require]
dev =
  aiohttp-devtools
  # Recommended by aiohttp docs:
  aiodns    # optional asynchronous DNS client
  cchardet  # optional fast character handling in C
  uvloop    # optional fast eventloop for asyncio
docs =
  MacFSEvents;platform_system=="Darwin"
  Sphinx
  sphinx-autobuild
  sphinx-autodoc-typehints
  sphinx-autodoc-napoleon-typehints
  sphinx_rtd_theme
test =
  pytest
  pytest-aiohttp
  pytest-cov
